@@ -1,6 +1,6 @@
 #define RUBY_VERSION "2.1.4"
 #define RUBY_RELEASE_DATE "2014-09-24"
-#define RUBY_PATCHLEVEL 246
+#define RUBY_PATCHLEVEL 247
 
 #define RUBY_RELEASE_YEAR 2014
 #define RUBY_RELEASE_MONTH 9
