@@ -1,3 +1,8 @@
+Wed Sep 24 02:30:55 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* parse.y (parse_ident): just after a label, new expression should
+	  start, cannot be a modifier.  [ruby-core:65211] [Bug #10279]
+
 Wed Sep 24 02:21:41 2014  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* win32/Makefile.sub (VCSUP): nothing to do if this worktree is not
